// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MUACard /> should render correctly 1`] = `
<MUACard
  entitlements={
    Array [
      Array [
        "entitled",
        Object {
          "is_entitled": true,
          "is_trial": false,
        },
      ],
      Array [
        "not-entitled",
        Object {
          "is_entitled": false,
          "is_trial": false,
        },
      ],
    ]
  }
  header="Test"
>
  <Title
    headingLevel="h3"
    size="xl"
  >
    <h3
      className="pf-c-title pf-m-xl"
    >
      Test
    </h3>
  </Title>
  <Stack
    hasGutter={true}
  >
    <div
      className="pf-l-stack pf-m-gutter"
    >
      <StackItem
        className="ins-c-mua-cardWrapper"
        key="entitled"
      >
        <div
          className="pf-l-stack__item ins-c-mua-cardWrapper"
        >
          <NavLink
            className="ins-c-mua-bundles__cardlink"
            to={
              Object {
                "pathname": "/my-user-access",
                "search": "bundle=entitled",
              }
            }
          >
            <Link
              aria-current={null}
              className="ins-c-mua-bundles__cardlink"
              to={
                Object {
                  "pathname": "/my-user-access",
                  "search": "bundle=entitled",
                }
              }
            >
              <LinkAnchor
                aria-current={null}
                className="ins-c-mua-bundles__cardlink"
                href="/my-user-access?bundle=entitled"
                navigate={[Function]}
              >
                <a
                  aria-current={null}
                  className="ins-c-mua-bundles__cardlink"
                  href="/my-user-access?bundle=entitled"
                  onClick={[Function]}
                >
                  <Card
                    className="ins-c-mua-bundles__card ins-c-mua-bundles__card--entitled"
                    isFlat={true}
                    isSelectable={true}
                    isSelected={false}
                    key="Entitled"
                  >
                    <article
                      className="pf-c-card pf-m-selectable pf-m-flat ins-c-mua-bundles__card ins-c-mua-bundles__card--entitled"
                      data-ouia-component-id="OUIA-Generated-Card-1"
                      data-ouia-component-type="PF4/Card"
                      data-ouia-safe={true}
                      id=""
                      tabIndex="0"
                    >
                      <CardTitle
                        className="ins-c-mua-bundles__card--header"
                      >
                        <div
                          className="pf-c-card__title ins-c-mua-bundles__card--header"
                        >
                           
                          Entitled
                        </div>
                      </CardTitle>
                      <CardBody>
                        <div
                          className="pf-c-card__body"
                        >
                          <Stack
                            hasGutter={true}
                          >
                            <div
                              className="pf-l-stack pf-m-gutter"
                            >
                              <StackItem
                                className="ins-c-mua-bundles__card--applist"
                              >
                                <div
                                  className="pf-l-stack__item ins-c-mua-bundles__card--applist"
                                >
                                  <span
                                    key="eApp1"
                                  >
                                     
                                    eApp1
                                     
                                  </span>
                                  <span
                                    key="eApp2"
                                  >
                                     
                                    eApp2
                                     
                                  </span>
                                </div>
                              </StackItem>
                            </div>
                          </Stack>
                        </div>
                      </CardBody>
                    </article>
                  </Card>
                </a>
              </LinkAnchor>
            </Link>
          </NavLink>
        </div>
      </StackItem>
      <StackItem
        className="ins-c-mua-cardWrapper"
        key="not-entitled"
      >
        <div
          className="pf-l-stack__item ins-c-mua-cardWrapper"
        >
          <NavLink
            className="ins-c-mua-bundles__cardlink"
            to={
              Object {
                "pathname": "/my-user-access",
                "search": "bundle=not-entitled",
              }
            }
          >
            <Link
              aria-current={null}
              className="ins-c-mua-bundles__cardlink"
              to={
                Object {
                  "pathname": "/my-user-access",
                  "search": "bundle=not-entitled",
                }
              }
            >
              <LinkAnchor
                aria-current={null}
                className="ins-c-mua-bundles__cardlink"
                href="/my-user-access?bundle=not-entitled"
                navigate={[Function]}
              >
                <a
                  aria-current={null}
                  className="ins-c-mua-bundles__cardlink"
                  href="/my-user-access?bundle=not-entitled"
                  onClick={[Function]}
                >
                  <Card
                    className="ins-c-mua-bundles__card ins-c-mua-bundles__card--not-entitled"
                    isFlat={true}
                    isSelectable={true}
                    isSelected={false}
                    key="Not entitled"
                  >
                    <article
                      className="pf-c-card pf-m-selectable pf-m-flat ins-c-mua-bundles__card ins-c-mua-bundles__card--not-entitled"
                      data-ouia-component-id="OUIA-Generated-Card-2"
                      data-ouia-component-type="PF4/Card"
                      data-ouia-safe={true}
                      id=""
                      tabIndex="0"
                    >
                      <CardTitle
                        className="ins-c-mua-bundles__card--header"
                      >
                        <div
                          className="pf-c-card__title ins-c-mua-bundles__card--header"
                        >
                           
                          Not entitled
                        </div>
                      </CardTitle>
                      <CardBody>
                        <div
                          className="pf-c-card__body"
                        >
                          <Stack
                            hasGutter={true}
                          >
                            <div
                              className="pf-l-stack pf-m-gutter"
                            >
                              <StackItem
                                className="ins-c-mua-bundles__card--applist"
                              >
                                <div
                                  className="pf-l-stack__item ins-c-mua-bundles__card--applist"
                                >
                                  <span
                                    key="neApp1"
                                  >
                                     
                                    neApp1
                                     
                                  </span>
                                  <span
                                    key="neApp2"
                                  >
                                     
                                    neApp2
                                     
                                  </span>
                                </div>
                              </StackItem>
                            </div>
                          </Stack>
                        </div>
                      </CardBody>
                    </article>
                  </Card>
                </a>
              </LinkAnchor>
            </Link>
          </NavLink>
        </div>
      </StackItem>
    </div>
  </Stack>
</MUACard>
`;

exports[`<MUACard /> should render correctly disabled 1`] = `
<MUACard
  entitlements={
    Array [
      Array [
        "entitled",
        Object {
          "is_entitled": true,
          "is_trial": false,
        },
      ],
      Array [
        "not-entitled",
        Object {
          "is_entitled": false,
          "is_trial": false,
        },
      ],
    ]
  }
  header="Test"
  isDisabled={true}
>
  <Title
    headingLevel="h3"
    size="xl"
  >
    <h3
      className="pf-c-title pf-m-xl"
    >
      Test
    </h3>
  </Title>
  <Stack
    hasGutter={true}
  >
    <div
      className="pf-l-stack pf-m-gutter"
    >
      <StackItem
        className="ins-c-mua-cardWrapper"
        key="entitled"
      >
        <div
          className="pf-l-stack__item ins-c-mua-cardWrapper"
        >
          <NavLink
            className="ins-c-mua-bundles__cardlink ins-c-mua-bundles__cardlink--disabled"
            to={
              Object {
                "pathname": "/my-user-access",
                "search": "bundle=entitled",
              }
            }
          >
            <Link
              aria-current={null}
              className="ins-c-mua-bundles__cardlink ins-c-mua-bundles__cardlink--disabled"
              to={
                Object {
                  "pathname": "/my-user-access",
                  "search": "bundle=entitled",
                }
              }
            >
              <LinkAnchor
                aria-current={null}
                className="ins-c-mua-bundles__cardlink ins-c-mua-bundles__cardlink--disabled"
                href="/my-user-access?bundle=entitled"
                navigate={[Function]}
              >
                <a
                  aria-current={null}
                  className="ins-c-mua-bundles__cardlink ins-c-mua-bundles__cardlink--disabled"
                  href="/my-user-access?bundle=entitled"
                  onClick={[Function]}
                >
                  <Card
                    className="ins-c-mua-bundles__card ins-c-mua-bundles__card--entitled ins-c-mua-bundles__card--disabled"
                    isFlat={true}
                    isSelectable={false}
                    isSelected={false}
                    key="Entitled"
                  >
                    <article
                      className="pf-c-card pf-m-flat ins-c-mua-bundles__card ins-c-mua-bundles__card--entitled ins-c-mua-bundles__card--disabled"
                      data-ouia-component-id="OUIA-Generated-Card-3"
                      data-ouia-component-type="PF4/Card"
                      data-ouia-safe={true}
                      id=""
                    >
                      <CardTitle
                        className="ins-c-mua-bundles__card--header"
                      >
                        <div
                          className="pf-c-card__title ins-c-mua-bundles__card--header"
                        >
                           
                          Entitled
                        </div>
                      </CardTitle>
                      <CardBody>
                        <div
                          className="pf-c-card__body"
                        >
                          <Stack
                            hasGutter={true}
                          >
                            <div
                              className="pf-l-stack pf-m-gutter"
                            >
                              <StackItem
                                className="ins-c-mua-bundles__card--applist"
                              >
                                <div
                                  className="pf-l-stack__item ins-c-mua-bundles__card--applist"
                                >
                                  <span
                                    key="eApp1"
                                  >
                                     
                                    eApp1
                                     
                                  </span>
                                  <span
                                    key="eApp2"
                                  >
                                     
                                    eApp2
                                     
                                  </span>
                                </div>
                              </StackItem>
                            </div>
                          </Stack>
                        </div>
                      </CardBody>
                    </article>
                  </Card>
                </a>
              </LinkAnchor>
            </Link>
          </NavLink>
        </div>
      </StackItem>
      <StackItem
        className="ins-c-mua-cardWrapper"
        key="not-entitled"
      >
        <div
          className="pf-l-stack__item ins-c-mua-cardWrapper"
        >
          <NavLink
            className="ins-c-mua-bundles__cardlink ins-c-mua-bundles__cardlink--disabled"
            to={
              Object {
                "pathname": "/my-user-access",
                "search": "bundle=not-entitled",
              }
            }
          >
            <Link
              aria-current={null}
              className="ins-c-mua-bundles__cardlink ins-c-mua-bundles__cardlink--disabled"
              to={
                Object {
                  "pathname": "/my-user-access",
                  "search": "bundle=not-entitled",
                }
              }
            >
              <LinkAnchor
                aria-current={null}
                className="ins-c-mua-bundles__cardlink ins-c-mua-bundles__cardlink--disabled"
                href="/my-user-access?bundle=not-entitled"
                navigate={[Function]}
              >
                <a
                  aria-current={null}
                  className="ins-c-mua-bundles__cardlink ins-c-mua-bundles__cardlink--disabled"
                  href="/my-user-access?bundle=not-entitled"
                  onClick={[Function]}
                >
                  <Card
                    className="ins-c-mua-bundles__card ins-c-mua-bundles__card--not-entitled ins-c-mua-bundles__card--disabled"
                    isFlat={true}
                    isSelectable={false}
                    isSelected={false}
                    key="Not entitled"
                  >
                    <article
                      className="pf-c-card pf-m-flat ins-c-mua-bundles__card ins-c-mua-bundles__card--not-entitled ins-c-mua-bundles__card--disabled"
                      data-ouia-component-id="OUIA-Generated-Card-4"
                      data-ouia-component-type="PF4/Card"
                      data-ouia-safe={true}
                      id=""
                    >
                      <CardTitle
                        className="ins-c-mua-bundles__card--header"
                      >
                        <div
                          className="pf-c-card__title ins-c-mua-bundles__card--header"
                        >
                           
                          Not entitled
                        </div>
                      </CardTitle>
                      <CardBody>
                        <div
                          className="pf-c-card__body"
                        >
                          <Stack
                            hasGutter={true}
                          >
                            <div
                              className="pf-l-stack pf-m-gutter"
                            >
                              <StackItem
                                className="ins-c-mua-bundles__card--applist"
                              >
                                <div
                                  className="pf-l-stack__item ins-c-mua-bundles__card--applist"
                                >
                                  <span
                                    key="neApp1"
                                  >
                                     
                                    neApp1
                                     
                                  </span>
                                  <span
                                    key="neApp2"
                                  >
                                     
                                    neApp2
                                     
                                  </span>
                                </div>
                              </StackItem>
                            </div>
                          </Stack>
                        </div>
                      </CardBody>
                    </article>
                  </Card>
                </a>
              </LinkAnchor>
            </Link>
          </NavLink>
        </div>
      </StackItem>
    </div>
  </Stack>
</MUACard>
`;
